# dg_wind_effects

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.event_pages  Dockerfile.gold_wind_effects  Dockerfile.live_results  Dockerfile.silver_live_results  Dockerfile.silver_weather_enriched  Dockerfile.silver_weather_observations  Dockerfile.weather_observations  README.md  pyproject.toml
audit/: backfill_event_locations_from_s3.py  backfill_live_results_audit.py
dashboard_weather_impacts/: app.py  charts.py  config.py  data_access.py  filters.py  formatters.py  state.py
docker/: entrypoint.sh  entrypoint_silver_weather_enriched.sh  entrypoint_silver_weather_observations.sh
docs/: dynamodb_data_model.md  ingest_pdga_event_pages_code_walkthrough.md  ingest_pdga_live_results_code_walkthrough.md  ingest_weather_observations_code_walkthrough.md  silver_live_results_code_walkthrough.md  silver_live_results_schema.md  silver_weather_observations_schema.md
gold_wind_effects/: __init__.py  dynamo_io.py  models.py  parquet_io.py  quality.py  runner.py  silver_io.py  transform.py
gold_wind_model_inputs/: __init__.py  dynamo_io.py  gold_io.py  models.py  parquet_io.py  quality.py  runner.py  transform.py
infra/: pdga_analytics_athena.yaml  pdga_bronze.yaml
infra_cdk/: app.py  cdk.json  requirements.txt
ingest_pdga_event_pages/: config.py  dynamo_reader.py  dynamo_writer.py  event_page_parser.py  http_client.py  repair_metadata_dates.py  runner.py  s3_writer.py
ingest_pdga_live_results/: backfill_live_results_ingested_flag.py  dynamo_reader.py  dynamo_writer.py  http_client.py  response_handler.py  runner.py  s3_writer.py
ingest_weather_observations/: __init__.py  config.py  dynamo_reader.py  dynamo_writer.py  geocode.py  http_client.py  location.py  models.py  open_meteo.py  response_handler.py  runner.py  s3_writer.py  silver_reader.py  utils.py  windowing.py
report_round_weather_impacts/: __init__.py  aggregations.py  athena_io.py  config.py  dimensions.py  dynamo_io.py  models.py  parquet_io.py  publish.py  queries.py  runner.py  scored_io.py
score_round_wind_model/: __init__.py  athena_io.py  config.py  dynamo_io.py  gold_io.py  model_io.py  models.py  parquet_io.py  runner.py  scoring.py
silver_pdga_live_results/: __init__.py  apply_layout_hole.py  apply_player_round.py  bronze_io.py  config.py  (+14 more)
(+176 files in other folders)
