[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dg-wind-effects"
version = "0.1.0"
description = "Disc Golf Wind Effects data platform ingestion and analytics pipelines."
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "urllib3>=2.0",
  "python-dotenv>=1.0",
  "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4.0",
]

[project.scripts]
ingest-pdga-event-pages = "ingest_pdga_event_pages.runner:main"
ingest-pdga-live-results = "ingest_pdga_live_results.runner:main"
ingest-weather-observations = "ingest_weather_observations.runner:main"
plan-silver-live-results = "silver_pdga_live_results.runner:main"
plan-silver-weather-observations = "silver_weather_observations.runner:main"
plan-silver-weather-enriched = "silver_weather_enriched.runner:main"
plan-gold-wind-effects = "gold_wind_effects.runner:main"
plan-gold-wind-model-inputs = "gold_wind_model_inputs.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "ingest_pdga_event_pages*",
  "ingest_pdga_live_results*",
  "ingest_weather_observations*",
  "silver_pdga_live_results*",
  "silver_weather_observations*",
  "silver_weather_enriched*",
  "gold_wind_effects*",
  "gold_wind_model_inputs*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]